--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 <body>
   <h1>HELLOOOO!!!</h1>
   <p>This is my first node.js project</p>
+  <br>
+  <br>
+  <p>
+    Check out these links!
+    <br>
+    <a href="">About Me</a>
+    <br>
+    <a href="">Contact Me</a>
+  </p>
 </body>
 </html>
