--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <p>
     Check out these links!
     <br>
-    <a href="">About Me</a>
+    <a href="http://localhost:8080/about">About Me</a>
     <br>
-    <a href="">Contact Me</a>
+    <a href="http://localhost:8080/contact-me">Contact Me</a>
   </p>
 </body>
 </html>
